styles/index.css
/* #region HOME */
.home {
  /*background-image: url("./images/home-background.jpg");*/
  background-color: rgb(48, 48, 48);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  align-items: end;
  padding: 3rem 0;
}

.home-layout-first { grid-area: one; }
.home-layout-second { grid-area: two; max-width: 18em; }
.home-layout-third { grid-area: three; }

.home-layout {
  display: grid;
  grid-template-areas: 
  "one"
  "two"
  "three";
  row-gap: 3rem;
  column-gap: calc(12vw);
  justify-items: start;
  align-items: center;
}

@media screen and (min-width: 50em) {
  .home-layout {
    grid-template-areas: 
    "one one"
    "two three";
  }
  .home-layout-third {
    justify-self: end;
  }
}

.black-div-button {
  background-color: var(--cl-neutral-900);
  padding: 0.5rem 1.5rem;
  width: 24rem;
  height: 8rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  line-height: 1.8rem;
  text-align: start;
}

.black-div-button p {
  min-width: 9rem;
  line-height: 2.4rem;
}

.black-div-button img {
  width: 4.5rem;
  height: 4.5rem;
  transition: transform 0.7s ease, opacity 0.7s ease;
  transform: translateX(-60%);
  opacity: 0;
}

.black-div-button:hover img {
  transform: translateX(0%);
  opacity: 1;
}
/* #endregion */

/* #region ABOUT US */
.au-left-column { grid-area: one; }
.au-vid-column { grid-area: two; }

.about-us-layout {
  display: grid;
  grid-template-areas: 
  "one"
  "two";
  align-items: center;
  height: 100%;
}

@media screen and (min-width: 50em) {
  .about-us-layout {
    grid-auto-columns: 1fr;
    grid-template-areas: 
    "one one two two two";
  }
}

.au-left-column {
  justify-content: center;
  gap: 2rem;
}

.au-vid-column {
  margin: 0 auto;
  background-color: var(--cl-neutral-900);
  width: 75%;
  height: 30rem;
}

/* #endregion */

/* #region SCROLL SLİDER */
.slide-screen-wrapper {
  min-height: 260vh;
  position: relative;
  background-color: var(--cl-neutral-900);
}

.slide-screen {
  position: sticky;
  top: 0;
  height: 100vh;
  color: var(--cl-neutral-200);
  display: grid;
  padding: 2rem 0;
}

.slide-header-container {
  display: flex;
  gap: 1rem;
  justify-content: space-between;
}

.slide-card-header {
  flex: 1;
  justify-content: center;
  align-items: start;
}

.slide-card-header > p {
  height: 2em;
}

.slide-card-bar {
  margin-top: 4rem;
  transition: background-color 0.5s ease;
  width: 100%;
  height: 0.6rem;
  background-color: white;
}

.red-bar {
  background-color: red;
}

.slide-card-text > p:nth-child(1) { grid-area: one; }
.slide-card-text > p:nth-child(2) { grid-area: two; }
.slide-card-text > p:nth-child(3) { grid-area: three; }
.slide-card-text > p:nth-child(4) { grid-area: four; }
.slide-card-text > p:nth-child(5) { grid-area: five; }
.slide-card-text > p:nth-child(6) { grid-area: six; }
.slide-card-text > p:nth-child(7) { grid-area: seven; }

.slide-card-text {
  width: clamp();
  display: grid;
  grid-auto-columns: 1fr;
  gap: 1rem;
  grid-template-areas: 
  "one one"
  "two three"
  "four five"
  "six seven";
}

@media screen and (min-width: 50em) {
  .slide-card-text {
    grid-template-areas: 
    "one one one ."
    "two three four ."
    "five six seven .";
  }
}

/* #endregion */

/* #region SUCCESS STORİES */
.success-stories {
  display: flex;
  align-items: center;
  padding: 4rem 0;
}

.success-stories-layout {
  width: 95%;
  margin-left: auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 4rem;
}

.success-stories-hero {
  display: flex;
  gap: 20rem;
  padding-right: 8rem;
  align-items: end;
  margin-bottom: -3rem;
}

.left-button,
.right-button {
  border: 0;
  width: 3rem;
  height: 4.5rem;
  border-radius: 0.2rem;
  text-align: center;
}

.left-button img {
  transform: scaleX(-1);
}

.left-button:hover,
.right-button:hover {
  background-color: rgb(202, 202, 202);
}

.arrow-buttons {
  display: flex;
  gap: 0.2rem;
}

.card-screen {
  width: 100%;
  overflow-x: scroll;
  white-space: nowrap;
  scrollbar-width: none;
}

.card-screen::-webkit-scrollbar {
  display: none;
}

.card-grid {
  margin: 1rem 0;
  transition: all 0.6s ease;
  display: flex;
  gap: 1rem;
  justify-content: center;
}

.story-card {
  --card-width: 18rem;
  --card-height: calc(1.3 * var(--card-width));
  background-color: var(--cl-neutral-100);
  color: var(--cl-neutral-900);
  height: calc(1.3 * var(--card-width));
  width: var(--card-width);
  display: flex;
  flex-direction: column;
  padding: 0.5rem;
  gap: 0.2rem;
}

.story-card > img {
  width: 100%;
  height: 70%;
  background-color: var(--cl-neutral-900);
}

/* #endregion */

/* #region REFERANCES */
.referances {
  padding: 8rem 0;
  overflow-x: hidden;
  --carousel-width: 300rem;
}

.referances-layout {
  display: flex;
  flex-direction: column;
  gap: 4rem;
}

@keyframes carousel {
  from {
    left: 0rem;
  }
  to {
    left: calc(-1 * (var(--carousel-width) / 2));
  }
}

.brand-scroll {
  margin-left: -5vw;
  width: 300rem;
  height: 16rem;
  background-color: rgb(255, 255, 255);
  display: flex;
  align-items: center;
  justify-content: space-around;
  position: relative;
  animation: carousel 25s linear infinite;
}

.brand-scroll > img {
  width: 6rem;
  height: 6rem;
}

.referances-layout > a {
  align-self: center;
}

/* #endregion */

/* #region BLOG LİNKS */
.blog-links {
  padding: 2rem 0;
}

.blog-card-holder {
  margin-top: 4rem;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
  gap: 1rem;
}

.blog-card {
  --width: 30rem;
  background-color: var(--cl-neutral-100);
  height: calc(1.1 * var(--width));
  width: var(--width);
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  color: var(--cl-neutral-900);
  padding: 0.8rem;
}

.blog-card > img {
  width: 100%;
  height: 18rem;
  background-color: var(--cl-neutral-900);
}

.blog-card > button {
  margin-top: auto;
  align-self: end;
  background-color: var(--cl-neutral-900);
  color: var(--cl-neutral-100);
  padding: 0.5rem 2rem;
}
/* #endregion */

/* #region CONTACT */
.contact-text-holder { grid-area: one; }
.contact-form { grid-area: two; }

.contact {
  width: 80%;
  margin: 6rem auto;
  padding: 2rem;
  background-color: var(--cl-neutral-100);
  display: grid;
  grid-auto-columns: 1fr;
  grid-template-areas: 
  "one"
  "two";
  gap: 4rem;
  box-shadow: 10px 10px 10px rgb(199, 199, 199);
  color: var(--cl-neutral-900);
}

@media screen and (min-width: 50em) {
  .contact {
    grid-template-areas: 
    "one two";
    width: 70%;
  }
}

.contact-form {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  justify-content: center;
}

.top-row {
  display: grid;
  grid-template-areas:
  "one two"
  "three four";
  flex-wrap: wrap;
  gap: 1.4rem;
}

.top-row > input {
  background-color: rgb(236, 236, 236);
  border-radius: 0.4rem;
  border: none;
  padding: 0.4rem;
  min-width: 12em;
  flex: 1;
}

.bottom-row {
  display: flex;
  justify-content: start;
  align-items: center;
}

input[type="checkbox"] {
  margin-right: 0.5rem;
}

label > a {
  text-decoration: underline;
}

.contact-form button {
  margin-left: auto;
  background-color: var(--cl-neutral-900);
  color: var(--cl-neutral-100);
  padding: 0.8rem 1.2rem;
}
/* #endregion */

